@@ -9,6 +9,7 @@ src/gui/auxiliary/event/dispatcher.cpp
 src/gui/auxiliary/event/distributor.cpp
 src/gui/auxiliary/event/handler.cpp
 src/gui/auxiliary/log.cpp
+src/gui/auxiliary/timer.cpp
 src/gui/auxiliary/widget_definition.cpp
 src/gui/auxiliary/window_builder/button.cpp
 src/gui/auxiliary/window_builder/control.cpp
