@@ -18,6 +18,7 @@ Version 1.7.9+svn:
    * Fix the gui2 unit tests
    * Reduced header dependencies
    * Fix the addon upload script to include the translate flag (patch #1387)
+   * Added a new gui2 timer engine
 
 Version 1.7.9-beta2:
  * AI:
